--- a/templates/communities/apply-labels.html
+++ b/templates/communities/apply-labels.html
@@ -192,15 +192,11 @@
                                 </div>
                                 <div class="pad-left-2">
                                     <p class="darkteal-text bold">Label shared by {{ bclabel.community.community_name }} </p>
-                                    <p class="bold"> {{ bclabel.name }} </p>
-                                    {% if bclabel.audiofile %} <div><audio src="{{ bclabel.audiofile.url }}" controls></audio></div>{% endif %}
-                                    <p>{{ bclabel.label_text}}</p>
 
-                                    {% include 'partials/_label-translation.html' %}
+                                    {% include 'partials/_label-content.html' %}
 
                                 </div>
                             </div>
-                            <!-- <div class="border-bottom-solid-teal pad-top-1"></div> -->
                         </div>
 
                     {% endfor %}
@@ -215,14 +211,11 @@
                                 </div>
                                 <div class="pad-left-2">
                                     <p class="darkteal-text bold">Label shared by {{ tklabel.community.community_name }} </p>
-                                    <p class="bold"> {{ tklabel.name }} </p>
-                                    {% if tklabel.audiofile %} <div><audio src="{{ tklabel.audiofile.url }}" controls></audio></div>{% endif %}
-                                    <p>{{ tklabel.label_text}}</p>
 
-                                    {% include 'partials/_label-translation.html' %}
+                                    {% include 'partials/_label-content.html' %}
+
                                 </div>
                             </div>
-                            <!-- <div class="border-bottom-solid-teal pad-top-1"></div> -->
                         </div>
                     {% endfor %}
                 {% endif %}
