address ashley's comment

--- a/templates/communities/view-label.html
+++ b/templates/communities/view-label.html
@@ -253,7 +253,7 @@
         </div>
     </div>
 
-    <div class="ml-16">
+    <div class="ml-16 {% if not bclabels and not tklabels %} hide {% endif %}">
         <h3>Explore your other customized Labels</h3>
 
         <div class="flex-this w-100 wrap">
