--- a/templates/communities/approve-label.html
+++ b/templates/communities/approve-label.html
@@ -3,49 +3,21 @@
     <form method="POST" action="">
         {% csrf_token %}
 
-        <div class="content-card-v2 content-card-space">
-            <div class="flex-this space-between">    
-                <div class="w-80">
-                    <h2 class="mb-0 mt-0">Approve Label</h2>
-                    <p>Unapproved Labels need to be approved by a secondary person (admin or editor) of the community. <br>
-                        If you would like to request changes to or deny approval for this Label, select 'No', then
-                        include a reason in the textbox that appears.<br><br>
-                        By approving this Label your community will now be able to apply it to the Local Contexts Projects.<br>
-                    </p>
-                </div>
-                <div>
-                    <p>Approve Label?</p>
-                    <div class="flex-this space-between">
-                        <div>
-                            <button class="primary-btn action-btn mt-2p" name="approve_label_yes">Yes</button>
-                        </div>
-                        <div>
-                            <a id="displayLabelNote" class="primary-btn white-btn mt-2p">No</a>
-                        </div>                        
-                    </div>
-                </div>
+        <div class="content-card-v2 content-card-space">   
+            <div class="w-80">
+                <h2 class="mb-0 mt-0">Approve Label</h2>
+                <p>Unapproved Labels need to be approved by a secondary person (admin or editor) of the community. <br>
+                    If you would like to request changes to or deny approval for this Label, select 'No', then
+                    include a reason in the textbox that appears.<br><br>
+                    By approving this Label your community will now be able to apply it to the Local Contexts Projects.<br>
+                </p>
             </div>
-        </div>
-
-        <div id="labelNoteDiv" class="content-card-v2 content-card-space hide">
-            <div class="mt-8">
-                <div class="flex-this space-between mb-8">
-                    <div>
-                        <h4 class="mt-0">Please add a note to request changes or give reason for not approving this Label.</h4>
-                    </div>
-                    <div>
-                        <button id="closeNoteDiv" class="primary-btn white-btn">Close <i class="fa fa-times" aria-hidden="true"></i></button>
-                    </div>
-                </div>
-                <div>{{ form.note }}</div>
-                <div><button class="primary-btn action-btn" name="create_label_note">Submit</button></div>
-            </div>            
         </div>
 
         <div class="content-card-v2 content-card-space"> 
             <h2 class="mt-0">Label to Approve</h2>
-            <div class="flex-this mb-8 mt-8 about-this-label">
-                <div class="w-20 ml-16 mt-16 mb-16 flex-end">
+            <div class="flex-this mt-8">
+                <div class="w-10">
                     {% if bclabel %}
                         {% include 'bclabels/which-label.html' %}
                     {% endif %}
@@ -54,16 +26,47 @@
                     {% endif %}
                 </div>   
                 <div class="w-90 mr-16">
-                    <h3>
+                    <h2 class="mt-0">
                         {% if bclabel.name %}{{ bclabel.name }}{% endif %}
                         {% if tklabel.name %}{{ tklabel.name }}{% endif %}
-                    </h3>
+                    </h2>
 
                     {% include 'partials/_label-content.html' %}
 
                 </div>                
             </div>
 
+        </div>
+
+        <div class="content-card-v2 content-card-space">
+            <h2 class="mt-0">Do you approve this Label?</h2>
+            <p>If you select 'No', please include a reason in the text box that appears.</p>
+            <div class="flex-this">
+                <div class="mr-16">
+                    <button class="primary-btn action-btn mt-2p" name="approve_label_yes">Yes, I approve this Label</button>
+                </div>
+                <div>
+                    <a id="displayLabelNote" class="primary-btn white-btn mt-2p">No, I do not approve this Label</a>
+                </div>                        
+            </div>
+
+        </div>
+
+        <div id="labelNoteDiv" class="content-card-v2 content-card-space hide">
+            <div class="mt-8">
+                <h2 class="mt-0">Submit your feedback</h2>
+                <p>Please add a note to request changes or give reason for not approving this Label.</p>
+
+                <div class="w-90">{{ form.note }}</div>
+                <div class="flex-this">
+                    <div class="mr-16">
+                        <button class="primary-btn action-btn" name="create_label_note">Submit feedback</button>
+                    </div>
+                    <div>
+                        <button id="closeNoteDiv" class="primary-btn white-btn">Cancel</button></div>
+                    </div>                        
+                </div>
+            </div>            
         </div>
         
     </form>
