feat: added error when institution name is not unique

--- a/templates/institutions/create-custom-institution.html
+++ b/templates/institutions/create-custom-institution.html
@@ -24,6 +24,10 @@
                 <div class="msg-red w-50"><small>{{ noror_form.institution_name.errors.as_text }}</small></div>
             {% endif %}
 
+            {% if noror_form.non_field_errors %}
+                <div class="msg-red w-50"><small>{{ noror_form.non_field_errors }}</small></div>
+            {% endif %}
+
                 {% include 'partials/_alerts.html' %}
             </div>
         </div>
