approve label page content update

--- a/templates/communities/approve-label.html
+++ b/templates/communities/approve-label.html
@@ -5,12 +5,8 @@
 
         <div class="content-card-v2 content-card-space">   
             <div class="w-80">
-                <h2 class="mb-0 mt-0">Approve Label</h2>
-                <p>Unapproved Labels need to be approved by a secondary person (admin or editor) of the community. <br>
-                    If you would like to request changes to or deny approval for this Label, select 'No', then
-                    include a reason in the textbox that appears.<br><br>
-                    By approving this Label your community will now be able to apply it to the Local Contexts Projects.<br>
-                </p>
+                <h2 class="mb-0 mt-0">Review for Approval</h2>
+                <p>As an account Administrator or Editor, you can approve this customized Label so that it can be used on Hub Projects. Labels can be edited in the future.</p>
             </div>
         </div>
 
@@ -39,14 +35,14 @@
         </div>
 
         <div class="content-card-v2 content-card-space">
-            <h2 class="mt-0">Do you approve this Label?</h2>
-            <p>If you select 'No', please include a reason in the text box that appears.</p>
+            <h2 class="mt-0">Should this Label be approved?</h2>
+            <p>If you would like to suggest revisions or further discussion, select "No" and share additional information in the text box that appears.</p>
             <div class="flex-this">
                 <div class="mr-16">
-                    <button class="primary-btn action-btn mt-2p" name="approve_label_yes">Yes, I approve this Label</button>
+                    <button class="primary-btn action-btn mt-2p" name="approve_label_yes">Yes, this Label is approved</button>
                 </div>
                 <div>
-                    <a id="displayLabelNote" class="primary-btn white-btn mt-2p">No, I do not approve this Label</a>
+                    <a id="displayLabelNote" class="primary-btn white-btn mt-2p">No, this Label is not approved</a>
                 </div>                        
             </div>
 
